<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Push Tool App</string>
    <string name="action_settings">Settings</string>

    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="receive_token_title">Receive token</string>
    <string name="receive_btn">Receive token</string>
    <string name="load_more_btn">Load More</string>

</resources>
