<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vhakulinen.pushtoolapp.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<!-- MAIN -->
<android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
            <LinearLayout
                android:id="@+id/main_container"
                android:orientation="vertical"
                android:animateLayoutChanges="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </LinearLayout>
            <Button
                android:text="@string/load_more_btn"
                android:onClick="loadMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </Button>
        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
<!-- Retrieve -->
<LinearLayout
    android:id="@+id/retrieve_view"
    android:visibility="gone"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receive_token_title" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="text"
        android:hint="@string/login_email" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textPassword"
        android:hint="@string/login_password" />
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/receive_btn"
        android:onClick="onRetrieve" />
</LinearLayout>

</FrameLayout>
